--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/markdoc": "^0.15.9",
     "@astrojs/react": "^4.4.2",
     "@astrojs/sitemap": "^3.6.0",
+    "@astrojs/svelte": "^7.2.2",
     "@sanity/astro": "^3.2.10",
     "@sanity/client": "^7.13.1",
     "@sanity/image-url": "^2.0.2",
@@ -26,9 +27,12 @@
     "react-is": "^19.2.0",
     "sanity": "^4.19.0",
     "styled-components": "^6.1.19",
-    "tailwindcss": "^4.1.17"
+    "svelte": "^5.45.6",
+    "tailwindcss": "^4.1.17",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
+    "@sveltejs/adapter-static": "^3.0.10",
     "gh-pages": "^6.3.0",
     "vite": "^7.2.6"
   }
