--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@astrojs/react": "^4.4.2",
     "@astrojs/sitemap": "^3.6.0",
     "@astrojs/svelte": "^7.2.2",
+    "@astrojs/vercel": "^9.0.2",
     "@sanity/astro": "^3.2.10",
-    "@sanity/client": "^6.15.0",
+    "@sanity/client": "^7.6.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.30.0",
     "@tailwindcss/vite": "^4.1.17",
@@ -22,8 +23,8 @@
     "@types/react-dom": "^18.2.0",
     "astro": "^5.16.0",
     "astro-portabletext": "^0.12.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-is": "^18.2.0",
     "sanity": "^3.30.0",
     "styled-components": "^6.1.8",
